# libmodbus

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: UpdateGitVersion.cmake  modbusConfig.cmake.in
libmodbus/: CMakeLists.txt
libmodbus/examples/: CMakeLists.txt  rtu_client_cpp.cpp  tcp_client_cpp.cpp  tcp_server_cpp.cpp
libmodbus/include/modbus/: modbus-version.h.in
libmodbus/src/: config.h.in  modbus-core.h  modbus-cpp.cpp  modbus-data.c  modbus-private.h  modbus-rtu.h  modbus-tcp.c  modbus-tcp.h  modbus.c
